--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </ul>
     <a class="button" href="documents/JohnDoeResume.pdf" target="_blank">Download Resume</a>
   </section>
-
+<!--
   <section id="contact" class="contact">
     <h2>Contact</h2>
     <form id="contactForm">
@@ -201,9 +201,9 @@
       <button type="submit">Send Message</button>
     </form>
   </section>
-
+-->
   <footer class="footer">
-    <p>&copy; 2025 John Doe. All rights reserved.</p>
+    <p>&copy; 2025 Sergei Lenskii. All rights reserved.</p>
   </footer>
 
   <script src="script.js"></script>
