--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>John Doe | Actor Portfolio</title>
+  <title>Sergei Lenskii | Actor Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <style>
@@ -153,7 +153,7 @@
 <body>
   <header class="header">
     <nav class="navbar">
-      <h1 class="logo">John Doe</h1>
+      <h1 class="logo">Sergei Lenskii</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#gallery">Gallery</a></li>
@@ -170,7 +170,10 @@
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p>Experienced stage and screen actor passionate about dramatic arts and storytelling. Trained in classical theatre and contemporary performance with a diverse portfolio of roles.</p>
+    <p> Versatile actor known for his compelling portrayal of the Father in Eurydice by Sarah Ruhl directed by Katelyn Schearer and David Meis. With training in acting and Trained in classical theatre and contemporary performance at the University of Minnesota and a background as an accomplished elocutionist and public speaker, Sergei brings depth and authenticity to every performance.</p>
+
+    <p>Beyond the stage, Sergei is a seasoned high-altitude mountaineer, expedition leader, and certified Hatha Yoga instructor, with over 30 years of wilderness experience. His diverse skill set includes combat, multiple European accents, and musical talent. A licensed physician and sex educator, he brings a rare combination of intellect, physicality, and emotional nuance to his performances.</p>
+      
   </section>
 
   <section id="gallery" class="gallery">
@@ -185,11 +188,11 @@
   <section id="resume" class="resume">
     <h2>Resume</h2>
     <ul>
-      <li><strong>Film:</strong> Lead role in "Urban Dreams"</li>
-      <li><strong>Theatre:</strong> Hamlet in "Hamlet" at Stratford Festival</li>
-      <li><strong>TV:</strong> Recurring role in "City Lights"</li>
+      <li><strong>Art:</strong> Lead role in "Urban Dreams"</li>
+      <li><strong>Science:</strong> Hamlet in "Hamlet" at Stratford Festival</li>
+      <li><strong>:</strong> Recurring role in "City Lights"</li>
     </ul>
-    <a class="button" href="documents/JohnDoeResume.pdf" target="_blank">Download Resume</a>
+    <a class="button" href="documents/SLenskii_Resume.pdf" target="_blank">Download Resume</a>
   </section>
 <!--
   <section id="contact" class="contact">
