--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
   <header class="header">
     <nav class="navbar">
-      <h1 class="logo">Sergei Lenskii</h1>
+      <h1 class="logo">Welcome to My Portfolio</h1>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#gallery">Gallery</a></li>
@@ -164,15 +164,15 @@
   </header>
 
   <section class="hero">
-    <h2>Welcome to My Portfolio</h2>
+    <h2>Sergei Lenskii</h2>
     <p>Actor | Performer | Storyteller</p>
   </section>
 
   <section id="about" class="about">
     <h2>About Me</h2>
-    <p> Versatile actor known for his compelling portrayal of the Father in Eurydice by Sarah Ruhl directed by Katelyn Schearer and David Meis. With training in acting and Trained in classical theatre and contemporary performance at the University of Minnesota and a background as an accomplished elocutionist and public speaker, Sergei brings depth and authenticity to every performance.</p>
+    <p> Versatile actor known for the compelling portrayal of the Father in Eurydice by Sarah Ruhl directed by Katelyn Schearer and David Meis. With training in acting and contemporary performance at the University of Minnesota and a background as an accomplished elocutionist and public speaker, I bring depth and authenticity to every performance.</p>
 
-    <p>Beyond the stage, Sergei is a seasoned high-altitude mountaineer, expedition leader, and certified Hatha Yoga instructor, with over 30 years of wilderness experience. His diverse skill set includes combat, multiple European accents, and musical talent. A licensed physician and sex educator, he brings a rare combination of intellect, physicality, and emotional nuance to his performances.</p>
+    <p>Beyond the stage, I am an experienced high-altitude mountaineer, expedition leader, and certified Hatha Yoga instructor, with over 30 years of wilderness experience. My diverse skill set includes combat, multiple European accents, and musical talent. A licensed physician and sex educator, I bring a unique combination of intellect, physicality, and emotional nuance to performances.</p>
       
   </section>
 
@@ -194,9 +194,11 @@
     </ul>
     <a class="button" href="documents/SLenskii_Resume.pdf" target="_blank">Download Resume</a>
   </section>
-<!--
+
   <section id="contact" class="contact">
     <h2>Contact</h2>
+    <p>Email: svlenskii@gmail.com</p>
+<!--
     <form id="contactForm">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
