--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
   <section id="contact" class="contact">
     <h2>Contact</h2>
-    <p>Email: svlenskii@gmail.com</p>
+    <p>Email: <b>svlenskii@gmail.com</b></p>
 <!--
     <form id="contactForm">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -205,8 +205,9 @@
       <textarea name="message" placeholder="Your Message" required></textarea>
       <button type="submit">Send Message</button>
     </form>
-  </section>
 -->
+  </section>
+
   <footer class="footer">
     <p>&copy; 2025 Sergei Lenskii. All rights reserved.</p>
   </footer>
