--- a/index.html
+++ b/index.html
@@ -183,6 +183,11 @@
       <img src="images/scene2.jpg" alt="Scene 2">
       <img src="images/scene3.jpg" alt="Scene 3">
     </div>
+    <div class="image-grid">
+      <img src="images/scene4.jpg" alt="Scene 1">
+      <img src="images/scene5.jpg" alt="Scene 2">
+      <img src="images/scene6.jpg" alt="Scene 3">
+    </div>
   </section>
 
   <section id="resume" class="resume">
