--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <img src="images/scene1.jpg" alt="Scene 1">
       <img src="images/scene2.jpg" alt="Scene 2">
       <img src="images/scene3.jpg" alt="Scene 3">
-      <img src="images/scene4.jpg" alt="Scene 4">
+      <img src="images/scene8.jpg" alt="Scene 8">
       <img src="images/scene5.jpg" alt="Scene 5">
       <img src="images/scene6.jpg" alt="Scene 6">
     </div>
@@ -197,7 +197,7 @@
       <li><strong>:</strong> Recurring role in "City Lights"</li>
     </ul>
     -->
-    <a class="button" href="documents/SLenskii_Resume.pdf" target="_blank">Download Resume</a>
+    <a class="button" href="SLenskii_Resume.pdf" target="_blank">Download Resume</a>
   </section>
 
   <section id="contact" class="contact">
