--- a/index.html
+++ b/index.html
@@ -190,13 +190,14 @@
 
   <section id="resume" class="resume">
     <h2>Resume</h2>
-    <!--
+
     <ul>
-      <li><strong>Art:</strong> Lead role in "Urban Dreams"</li>
-      <li><strong>Science:</strong> Hamlet in "Hamlet" at Stratford Festival</li>
-      <li><strong>:</strong> Recurring role in "City Lights"</li>
+      <li><a href="https://www.instagram.com/ls.art.on/"><strong>Art</strong></a></li>
+      <li><a href="https://www.linkedin.com/in/slenskii"><strong>Science</strong></a></li>
+      <li><a href="https://ccaps.umn.edu/story/education-strengthens-medical-background"><strong>Education</strong></a></li>
+
     </ul>
-    -->
+
     <a class="button" href="SLenskii_Resume.pdf" target="_blank">Download Resume</a>
   </section>
 
